--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
   <div class="container2">
     <h3>Summary</h3>
     <div class="box1">
-      <img class="reaction" src=".images/icon-reaction.svg" alt="icon-reaction">
+      <img class="reaction" src=".icon-reaction.svg" alt="icon-reaction">
       <p class="write1">Reaction</p>
       <p class="write2">80 <span style="color: hsl(241, 100%, 89%);"> / 100</span></p>
     </div>
     <div class="box2">
-      <img class="memory" src=".images/icon-memory.svg" alt="icon-memory">
+      <img class="memory" src=".icon-memory.svg" alt="icon-memory">
       <p class="write1" style="color: hsl(39, 100%, 56%);">Memory</p>
       <p class="write2">92 <span style="color :hsl(241, 100%, 89%); ">/ 100</span></p>
     </div>
     <div class="box3">
-      <img class="memory" src=".images/icon-verbal.svg" alt="icon-verbal">
+      <img class="memory" src=".icon-verbal.svg" alt="icon-verbal">
       <p class="write3" style="color:hsl(166, 100%, 37%) ;">Verbal</p>
       <p class="write2">61 <span style="color: hsl(241, 100%, 89%);">/ 100</span></p>
     </div>
     <div class="box4">
-      <img class="memory" src=".images/icon-visual.svg" alt="icon-visual">
+      <img class="memory" src=".icon-visual.svg" alt="icon-visual">
       <p class="write4" style="color:hsl(234, 85%, 45%); ">Visual</p>
       <p class="write2">72 <span style="color: hsl(241, 100%, 89%);">/ 100</span></p>
     </div>
